syntax = "proto3";

package account;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service TeamService {
  rpc Create (CreateRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/account/{organization}/team/{name}",
      body: "*"
    };
  };
  rpc List (ListRequest) returns (ListReply) {
    option (google.api.http) = {
      get: "/v1/account/{organization}/team"
    };
  };
  rpc Edit (EditRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/v1/account/{organization}/team/{name}",
      body: "*"
    };
  };
  rpc GetDetails (GetDetailsRequest) returns (GetDetailsReply) {
    option (google.api.http) = {
      get: "/v1/account/{organization}/team/{name}"
    };
  };
  rpc Delete (DeleteRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/account/{organization}/team/{name}"
    };
  };
  rpc AddMemberships (AddMembershipsRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      patch: "/v1/account/{organization}/team/{name}/membership",
      body: "*"
    };
  };
  rpc DeleteMemberships (DeleteMembershipsRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/account/{organization}/team/{name}/membership"
    };
  };
}

//Create function
message CreateRequest {
  string organization = 1;
  string name = 2;
  string description = 3;
}

//List function
message ListRequest {
  string organization = 1;
}

message ListReply {
  repeated string team_names = 2;
}

//Edit function
message EditRequest {
  string organization = 1;
  string name = 2;
  string description = 3;
}

//GetDetails function
message GetDetailsRequest {
  string organization = 1;
  string name = 2;
}

message GetDetailsReply {
  string organization = 1;
  string name = 2;
  string description = 3;
  repeated string members = 4;
}

//Delete function
message DeleteRequest {
  string organization = 1;
  string name = 2;
}

//AddMembership function
message AddMembershipsRequest {
  string organization = 1;
  string name = 2;
  repeated string Members = 3;
}

//DeleteMembership function
message DeleteMembershipsRequest {
  string organization = 1;
  string name = 2;
  repeated string Members = 3;
}
