syntax = "proto3";

package schema;

enum AccountType {
  USER = 0;
  ORGANIZATION = 1;
}

enum ResourceType {
  STACK = 0;
  SERVICE = 1;
  // TODO Add missing types
}

enum GrantType {
  READ = 0;
  WRITE = 1;
  DELETE = 3;
  ALL = 4;
}

message Account {
  string id = 1;
  string user_name = 2;
  AccountType type = 3;
  string email = 4;
  string password_hash = 5;
  bool is_verified = 6;
  int64 create_dt = 7;
  // TODO Billing Attributes;
}

message OrganizationMember {
  string id = 1;
  string org_account_id = 2; // FK->AccountEntry.id (type=org)
  string user_account_id = 3; // FK->AccountEntry.id (type=user)
  int64 create_dt = 4;
}

message Resource {
  string id = 1;
  string org_account_id = 2; // FK->AccountEntry.id (type=org)
  string team_id = 3;
  string name = 4;
  ResourceType type = 5;
  int64 create_dt = 6;
}

message ResourceSettings {
  string id = 1;
  string resource_id = 2; // FK->ResourceEntry.id
  string key = 3;
  string value = 4;
  int64 create_dt = 5;
}

message Team {
  string id = 1;
  string org_account_id = 2; // FK->AccountEntry.id (type=org)
  string name = 3;
  string desc = 4;
  int64 create_dt = 5;
}

message TeamMember {
  string id = 1;
  string user_account_id = 2; // FK->AccountEntry.id (type=user)
  string team_id = 3; // FK->TeamEntry.id
  int64 create_dt = 4;
}

message Permission {
  string id = 1;
  string team_id = 2; // FK->TeamEntry.id
  string resource_id = 3; // FK->ResourceEntry.id
  GrantType grant_type = 4;
  int64 create_dt = 5;
}
